fix: Fixed image background removal image set handling.